small screen button alignment issue solved

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -334,7 +334,7 @@ body.appear-animate {
 
   .chatbot-details-btn-container button,
   #dropdownMenuButton1 {
-    padding: 3px;
+    padding: 6px 10px;
   }
 }
 
